random-constructible-derive/tests/ui/02-non-unit-variants.stderr
error: proc-macro derive panicked
 --> tests/ui/02-non-unit-variants.rs:7:10
  |
7 | #[derive(RandomConstructible, Copy, Clone, Debug, PartialEq, Eq, Hash)]
  |          ^^^^^^^^^^^^^^^^^^^
  |
  = help: message: RandomConstructible can only be derived for enums with unit variants

warning: unused import: `random_constructible::*`
 --> tests/ui/02-non-unit-variants.rs:4:5
  |
4 | use random_constructible::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
